...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Your First Name:"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/first_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="First Name"
        android:inputType="textPersonName"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Photo URL:"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/URL_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Photo URL"
        android:inputType="textPersonName"
...
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/first_name_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

...
