...
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/add_one_class_button"
      android:layout_width="64dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/add_button"
      app:icon="@android:drawable/ic_input_add"
      app:layout_constraintBottom_toTopOf="@+id/course_entry_done_button"
...
